Mon Mar 21 15:42:06 2005  George Lebl <jirka@5z.com>

	* src/mpwrap.c: some allocation fixes, the float formatting is
	  incredibly evil!

Mon Mar 21 14:48:28 2005  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: set default precision to 128
	  bits, it's faster and most people don't need more.  Also save the
	  precision in config.  Further sanitize things from the command line
	  and the config, to avoid using bogus values.

Mon Mar 21 11:18:57 2005  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: move the whole gmp structures into the MpwRealNum
	  struct to avoid another pointer.  Further avoid initializing a new
	  number just to throw it away if possible and be smarter with
	  initialization types.  Fix some leaks and errors.

Fri Mar 18 18:03:30 2005  George Lebl <jirka@5z.com>

	* src/mpwrap.ch: fixup memory usage by whacking the duplicate
	  pointers in the real number structure.

	* src/eval.c: fix leaks on elt by elt matrix operations

Fri Mar 18 11:48:14 2005  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: whack the unneeded type field from mpw_t to save
	  a byte per number and probably make alignment nicer and all that.

Fri Mar 18 11:11:07 2005  George Lebl <jirka@5z.com>

	* src/graphing.c, src/funclib.[ch]: Allow drawing longer lines with
	  LinePlotDrawLine by passing in a matrix of points.

Tue Feb 08 18:18:18 2005  George Lebl <jirka@5z.com>

	* src/graphing.c: deal with closing of the graph window when we're
	  in the middle of plotting without crashing

Thu Jan 06 13:28:12 2005  George Lebl <jirka@5z.com>

	* lib/functions/elementary.gel: add NewtonsMethodPoly

Thu Jan 06 10:06:10 2005  George Lebl <jirka@5z.com>

	* src/graphing.c, src/funclib.[ch], src/Makefile.am,
	  src/funclibhelper.cP: make some functions/macros sharable by
	  either making them extern or putting them inside a includable
	  file

	* src/graphing.c: make LinePlotWindow parameter behave correctly with