@@ -1,3 +1,11 @@
+Wed Mar 23 10:56:37 2005  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.[ch]: add blinking cursor selection
+
+	* lib/functions/complex_numbers.gel: added and commented out a bad
+	  implementation of zeta and gamma functions, must do this properly
+	  at some point
+
 Mon Mar 21 15:42:06 2005  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: some allocation fixes, the float formatting is
